--- a/public/app.json
+++ b/public/app.json
@@ -39,9 +39,7 @@
 //	    	"path": "cordova-2.1.0.js"
 //        },
         {
-            "path": "app-all.js",
-            /*"path": "app-all.js",*/
-            /*"path": "app.js",*/
+            "path": "app.js",
             "bundle": true,  /* Indicates that all class dependencies are concatenated into this file when build */
             "update": "full"
         },
