--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "author": "The WebMatrix Team <webmatrix@microsoft.com>",
   "description": "A simple boilerplate for building node applications on Windows Azure (or wherever)",
-  "contributors": [ 
+  "contributors": [
     {
       "name": "Justin Beckwith",
       "email": "justbe@microsoft.com"
-    } 
-  ],  
-  "main": "./server.js",  
+    }
+  ],
+  "main": "./server.js",
   "keywords": [
     "azure",
     "boilerplate",
     "express"
   ],
-  "dependencies" : {
+  "dependencies": {
     "express": "2.5.7",
-    "jade": ">= 0.0.1"
+    "jade": ">= 0.0.1",
+    "mongojs": "^0.18.2",
+    "node-uuid": "^1.4.3",
+    "socket.io": "^1.3.5"
   },
   "noAnalyze": true,
   "license": "Apache",
