--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "express"
   ],
   "dependencies": {
+    "body-parser": "^1.12.3",
+    "connect": "^3.3.5",
     "express": "2.5.7",
     "jade": ">= 0.0.1",
+    "method-override": "^2.3.2",
     "mongojs": "^0.18.2",
+    "multer": "^0.1.8",
     "node-uuid": "^1.4.3",
     "socket.io": "^1.3.5"
   },
